# sarashina-grpo

./: .gitignore  README.md  main.py  pyproject.toml
datasets/: smalltalk.csv
notebooks/: finetuning.ipynb  inference.ipynb
scripts/: setup.sh
src/sarashina_grpo/: config.py  dataset_loader.py  main.py  print.py
src/sarashina_grpo/grpo/: xml_tuning.py
