[project]
name = "sarashina-grpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.6",
    "langdetect>=1.0.9",
    "nbstripout>=0.8.1",
    "papermill>=2.6.0",
    "unsloth>=2025.3.19",
    "vllm>=0.8.2",
]
