[project]
name = "sarashina-grpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fasttext-langdetect>=1.0.5",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.6",
    "nbstripout>=0.8.1",
    "papermill>=2.6.0",
    "tensorboard>=2.19.0",
    "unsloth>=2025.3.19",
    "vllm>=0.8.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
